deploy/retrieveUnpackaged/objects/Hybrid_Connect__c.object
<CustomObject>
    <description>used to enter data for hybrid connect opportunities - will be required when opportunity is set to validate stage</description>
    <fields>
        <fullName>ASA_Discussion_ASA_Model__c</fullName>
        <inlineHelpText>Device must be an ASA 5510 or higher</inlineHelpText>
        <label>ASA Discussion: ASA Model</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ASA_Discussion_Load_Balancing_Complex__c</fullName>
        <inlineHelpText>Educated on the complexities of load balancing(proxying required so source identity will be lost) in this solution or load balancing is not required-if load balancing is required, it is best to engage the Escalations team to review the requirements</inlineHelpText>
        <label>ASA Discussion: Load Balancing Complex</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Opportunity__r.Account.CORE_Account_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cloud_Data_Center__c</fullName>
        <label>Cloud Data Center</label>
        <picklist>
            <picklistValues>
                <fullName>DFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LON3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cloud_Username__c</fullName>
        <formula>Opportunity__r.Cloud_Username__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cloud Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Segment__c</fullName>
        <label>Current Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Colo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dedicated_Data_Center__c</fullName>
        <label>Dedicated Data Center</label>
        <picklist>
            <picklistValues>
                <fullName>DFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LON3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>F5_Discussion_F5_Code_Version__c</fullName>
        <inlineHelpText>Device must be running LTM code version 10.2 (or higher) (for new devices, this will already be the case; for existing devices, verify with Network Security).</inlineHelpText>
        <label>F5 Discussion: F5 Code Version</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F5_Discussion_Offering_Capabilities__c</fullName>
        <inlineHelpText>Customer educated that the solution only handles the creation of Packet Filters for access from Cloud Servers back to the Dedicated environment and does not include auto-scaling or automatically adding a Cloud Server to a load balancer pool</inlineHelpText>
        <label>F5 Discussion: Offering Capabilities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F5_and_ASA_Discussion_Access_Req_Process__c</fullName>
        <inlineHelpText>Educated on process for requesting Cloud Connect access control changes-all requests for changes from Cloud to Dedicated and the Internet are submitted via ticket to the Hybrid Hosting Escalations team</inlineHelpText>
        <label>F5 and ASA Discussion:Access Req Process</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F5_and_ASA_Discussion_Cloud_Data_Center__c</fullName>
        <inlineHelpText>Dedicated environment, Cloud Servers provisioning target (both XenClassic (Linux) and XenServer (Windows)), and Cloud Files target are in the same data center (verify via Cloud Control and Backstage)</inlineHelpText>
        <label>F5 and ASA Discussion: Cloud Data Center</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F5_and_ASA_Discussion_Cloud_Net_Changes__c</fullName>
        <inlineHelpText>Educated on the networking changes to each Cloud Server;manually or via a script-customer will receive a config guide at the end of the implementation-will be required to disable the public interface and update the default gateway on the private interface</inlineHelpText>
        <label>F5 and ASA Discussion: Cloud Net Changes</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F5_and_ASA_Discussion_Cloud_Throughput__c</fullName>
        <inlineHelpText>Educated on throughput limitations and overall solution throughput limits-private interfaces are limited to 20-140 Mbps based on the size of the instance;overall solution throughput is typically limited by the interface speed on the dedicated net device</inlineHelpText>
        <label>F5 and ASA Discussion: Cloud Throughput</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F5_and_ASA_Discussion_Host_Bas__c</fullName>
        <inlineHelpText>Educated on the requirement to still run a host-based firewall(IPTables or Windows Firewall) on the private interface of each Cloud Servers instance(there is still a broadcast domain which contain other Cloud Servers customers in the same subnet)</inlineHelpText>
        <label>F5 and ASA Discussion:Host Based Firewll</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F5_and_ASA_Discussion_Managed_Colo__c</fullName>
        <inlineHelpText>If Managed Colo, Rackspace must retain full support (no customer access) of the network device that will have Cloud Connect configured (either the F5 or the ASA)</inlineHelpText>
        <label>F5 and ASA Discussion: Managed Colo</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F5_and_ASA_Discussion_Minimum_Deal_Size__c</fullName>
        <inlineHelpText>Meets minimum deal size requirements (5 servers - either Dedicated or Cloud Servers) or has approval of the Escalations team</inlineHelpText>
        <label>F5 and ASA Discussion: Minimum Deal Size</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F5_and_ASA_Discussion_PATing__c</fullName>
        <inlineHelpText>Educated on how NATing/PATing is configured(by default, each Cloud Server will be setup with an outbound PAT on the customer&apos;s firewall, there will be no one-to-one NATs configured for each Cloud Server by default for inbound access)</inlineHelpText>
        <label>F5 and ASA Discussion: PATing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F5_and_ASA_Discussion_Support_Levels__c</fullName>
        <inlineHelpText>Customer educated on support differences between Dedicated environment and Cloud (Cloud offers unmanaged support where the customer is responsible for the patching, monitoring, configuration, and troubleshooting of everything within the Operating System)</inlineHelpText>
        <label>F5 and ASA Discussion: Support Levels</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hybrid_Offering__c</fullName>
        <label>Hybrid Offering</label>
        <picklist>
            <picklistValues>
                <fullName>Cloud Connect F5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Connect ASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud for Enterprises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Base_or_New_Sale__c</fullName>
        <formula>TEXT(Opportunity__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Base or New Sale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>opportunity associated to the deal</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Hybrid_Connects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_for_Hybrid__c</fullName>
        <label>Reason for Hybrid</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Engineer__c</fullName>
        <formula>Opportunity__r.Solution_Engineer__r.FirstName  + &quot; &quot; +  Opportunity__r.Solution_Engineer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Engineer</label>
        <type>Text</type>
    </fields>
    <label>RackConnect</label>
    <nameField>
        <label>Hybrid Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RackConnects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASA_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Hybrid_Offering__c, &quot;Cloud Connect ASA&quot;),
OR(TEXT(ASA_Discussion_ASA_Model__c) = &quot;&quot;,
TEXT(ASA_Discussion_Load_Balancing_Complex__c) = &quot;&quot;))</errorConditionFormula>
        <errorMessage>You selected ASA from Hybrid Offering field therefore you must enter values in the ASA Model and ASA Load Balancing Complex fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>F5_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Hybrid_Offering__c, &quot;Cloud Connect F5&quot;),
OR(TEXT(F5_Discussion_F5_Code_Version__c) = &quot;&quot;,
TEXT(F5_Discussion_Offering_Capabilities__c) = &quot;&quot;))</errorConditionFormula>
        <errorMessage>You selected F5 from Hybrid Offering field therefore you must enter values in the F5 Code Version and F5 Offering Capabilities fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>F5_and_ASA_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Hybrid_Offering__c, &quot;Cloud for Enterprises&quot;)),
OR(TEXT( F5_and_ASA_Discussion_Access_Req_Process__c)  = &quot;&quot;,
TEXT(F5_and_ASA_Discussion_Cloud_Net_Changes__c) = &quot;&quot;,
TEXT(F5_and_ASA_Discussion_Cloud_Throughput__c) = &quot;&quot;,
TEXT(F5_and_ASA_Discussion_Host_Bas__c) = &quot;&quot;,
TEXT(F5_and_ASA_Discussion_Managed_Colo__c) = &quot;&quot;,
TEXT(F5_and_ASA_Discussion_Minimum_Deal_Size__c) = &quot;&quot;,
TEXT(F5_and_ASA_Discussion_PATing__c) = &quot;&quot;,
TEXT(F5_and_ASA_Discussion_Support_Levels__c) = &quot;&quot;,
TEXT(F5_and_ASA_Discussion_Cloud_Data_Center__c) = &quot;&quot;))</errorConditionFormula>
        <errorMessage>You selected F5 or ASA from Hybrid Offering field therefore you must enter values in the in all of the F5 and ASA fields.</errorMessage>
    </validationRules>
</CustomObject>